Began working on core data/cloudkit.  Crazy.  Runs, but don't do much

--- a/StokR/Base.lproj/Main.storyboard
+++ b/StokR/Base.lproj/Main.storyboard
@@ -1,15 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Tby-yh-jMw">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.17" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Tby-yh-jMw">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.14"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Navigation items with more than one left or right bar item" minToolsVersion="7.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="AppleSDGothicNeo.ttc">
+            <string>AppleSDGothicNeo-Regular</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--Tails Table View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -20,15 +25,15 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" accessoryType="detailButton" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="tailCell" rowHeight="100" id="vpd-Fq-XmP" customClass="TailTableViewCell" customModule="StokR" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="tailCell" rowHeight="100" id="vpd-Fq-XmP" customClass="TailTableViewCell" customModule="StokR" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="375" height="100"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="vpd-Fq-XmP" id="OOq-p1-2Y8">
-                                    <rect key="frame" x="0.0" y="0.0" width="328" height="99.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="99.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="N279DV" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wPh-qp-qCx">
-                                            <rect key="frame" x="8" y="24" width="170" height="50"/>
+                                            <rect key="frame" x="8" y="24" width="217" height="50"/>
                                             <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="30"/>
                                             <color key="textColor" red="0.26211422680000002" green="0.31539288160000001" blue="0.68637776370000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                             <nil key="highlightedColor"/>
@@ -43,7 +48,7 @@
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="tailLabel" destination="wPh-qp-qCx" id="q5X-nB-Vup"/>
-                                    <segue destination="ZUw-Um-odg" kind="show" identifier="editTailSegue" trigger="accessoryAction" id="GJY-8u-apj"/>
+                                    <segue destination="ZUw-Um-odg" kind="show" identifier="editTailSegue" id="QIb-04-ays"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -80,13 +85,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Tail" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jc8-oe-zvi">
-                                <rect key="frame" x="16" y="72" width="343" height="30"/>
+                                <rect key="frame" x="16" y="79" width="343" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="20"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="92" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="lRF-Bu-6HU">
-                                <rect key="frame" x="0.0" y="110" width="375" height="557"/>
+                                <rect key="frame" x="0.0" y="117" width="375" height="550"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cabinetCell" rowHeight="92" id="bZK-GI-NC9" customClass="CabinetCell" customModule="StokR" customModuleProvider="target">
@@ -102,7 +107,7 @@
                                                     <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="17"/>
                                                     <textInputTraits key="textInputTraits"/>
                                                 </textField>
-                                                <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2b4-t0-KKu">
+                                                <imageView contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2b4-t0-KKu">
                                                     <rect key="frame" x="288" y="8" width="65" height="76"/>
                                                     <gestureRecognizers/>
                                                     <constraints>
@@ -139,8 +144,8 @@
                             <constraint firstItem="fvo-ks-oB6" firstAttribute="top" secondItem="lRF-Bu-6HU" secondAttribute="bottom" id="HYx-Ma-M1N"/>
                             <constraint firstItem="jc8-oe-zvi" firstAttribute="trailing" secondItem="4Kp-O6-Dfv" secondAttribute="trailingMargin" id="Rku-hs-uhw"/>
                             <constraint firstItem="lRF-Bu-6HU" firstAttribute="leading" secondItem="4Kp-O6-Dfv" secondAttribute="leadingMargin" constant="-16" id="e1X-WI-ZEn"/>
-                            <constraint firstItem="fvo-ks-oB6" firstAttribute="top" secondItem="jc8-oe-zvi" secondAttribute="bottom" constant="565" id="htW-jl-AvT"/>
                             <constraint firstItem="jc8-oe-zvi" firstAttribute="leading" secondItem="4Kp-O6-Dfv" secondAttribute="leadingMargin" id="mlC-qi-XDZ"/>
+                            <constraint firstItem="jc8-oe-zvi" firstAttribute="top" secondItem="XkN-lw-lkc" secondAttribute="bottom" constant="15" id="nQG-1C-MXZ"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="h9k-g6-VBj">
@@ -158,7 +163,6 @@
                         </rightBarButtonItems>
                     </navigationItem>
                     <connections>
-                        <outlet property="cabinetsTableView" destination="lRF-Bu-6HU" id="Ivn-4b-oeV"/>
                         <outlet property="tableView" destination="lRF-Bu-6HU" id="DFV-Yu-mfD"/>
                         <outlet property="tailsTextField" destination="jc8-oe-zvi" id="6Gn-b8-7st"/>
                     </connections>
@@ -187,6 +191,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="NhY-gL-MXT"/>
+        <segue reference="QIb-04-ays"/>
     </inferredMetricsTieBreakers>
 </document>
